--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/tinker": "^2.7",
         "mews/captcha": "^3.3",
         "ramsey/uuid": "^4.7",
-        "simplesoftwareio/simple-qrcode": "^4.2"
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "smalot/pdfparser": "^2.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
